--- a/RecetasSLN/Properties/Resources.resx
+++ b/RecetasSLN/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="cnnString" xml:space="preserve">
-    <value>Data Source=DESKTOP-UKHHIVP\SQLEXPRESS;Initial Catalog=recetas_db;Integrated Security=True</value>
+    <value>Data Source=DESKTOP-AF67D5U\SQLEXPRESS;Initial Catalog=recetasApp;Integrated Security=True</value>
     <comment>cnnString</comment>
   </data>
 </root>
